Skip to content

Spatializer cuts-off sound or blasts noise

======================================================== Warning: Do not try to reproduce with volume set high.

Steps to reproduce:

-Windows XP sp3

-Install a fresh copy of VLC 1.1.10 (or 1.1.7)

-play any MP3

-While playing, click the EQ icon.

-In "adjustment and Effects" window -> Audio tab -> Spatializer tab

-Click "Enable Spatializer"

-Move sliders one at a time (Left to right) up or down and place back to original position.(2-2-0-0-0)

-By the time you reach the middle slider, sound will cut-out.

-Play some more(e.g try to set to 0-0-0-0-0) and you should be blasted with ear-piercing white noise.

-Music comes back on after disabling Spatializer

-Exiting VLC and restarting will not make Spatializer work again.

-Clearing preferences has worked sometimes in 1.1.10.

NOTE: some settings of the Spatializer clearly do not sound good or break the algorithm. (e.g. set roomsize to max)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information