Spatializer: more sane default for Wet value and limit all values

I am not sure this filter ever worked as intended.
It was providing serious distortions.

This is now limiting seriously the space of parameters but at least it
does not explode anymore. Should close #4887

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>